Regression: GPU Compositor 2d stabilization is bugged in 4.1 #113864

Closed
opened 2023-10-17 21:56:08 +02:00 by Lucas · 6 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-16 20:26, hash: f20e38d42216
Worked: 4.0.0 Beta from 10/10/23

Short description of error
GPU Compositor 2d stabilization doesn't display properly when rotation stabilization is enabled.
Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]
Open provided blend file.
Enable and disable Rotation in the stabilize tab to see the difference. This file works properly in 4.0.
*It renders correctly, just the display stabilization is bugged

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-16 20:26, hash: `f20e38d42216` Worked: 4.0.0 Beta from 10/10/23 **Short description of error** GPU Compositor 2d stabilization doesn't display properly when rotation stabilization is enabled. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] Open provided blend file. Enable and disable Rotation in the stabilize tab to see the difference. This file works properly in 4.0. *It renders correctly, just the display stabilization is bugged
Lucas added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-17 21:56:09 +02:00
Member

Hi, thanks for the report. Can indeed confirm the difference.
cc @OmarEmaraDev

Hi, thanks for the report. Can indeed confirm the difference. cc @OmarEmaraDev
Member

This is most likely not a bug. The behavior of transformations was changed in #112332. In that change, rotations are now realized at the point of the stabilize node, so the size of the image changes due to the expansion resulted from rotation, which is in-turn taken into account at the Scale node.

I am not sure what you really need, but I suspect the correct setup is to simply change the order of the nodes such that the scale happens first.

This is most likely not a bug. The behavior of transformations was changed in #112332. In that change, rotations are now realized at the point of the stabilize node, so the size of the image changes due to the expansion resulted from rotation, which is in-turn taken into account at the Scale node. I am not sure what you really need, but I suspect the correct setup is to simply change the order of the nodes such that the scale happens first. ![](https://projects.blender.org/attachments/b0098529-64ae-4e5f-8310-bfb8a8a100be)
Omar Emara added
Status
Needs Triage
and removed
Status
Confirmed
Priority
High
labels 2023-10-18 09:12:47 +02:00
Author

@OmarEmaraDev I changed the order and still the same bad behavior.image. It looks like the rotation stabilization enabled causes translation of the image. If you disable it looks correct.

@OmarEmaraDev I changed the order and still the same bad behavior.![image](/attachments/914c934c-07ce-4526-89ac-a626c623f7e0). It looks like the rotation stabilization enabled causes translation of the image. If you disable it looks correct.
246 KiB
Author

Just downloaded the newest alpha just in case and same problem, rotation enabled causes destabilization
image

Just downloaded the newest alpha just in case and same problem, rotation enabled causes destabilization ![image](/attachments/370c4bca-c161-4bb5-8d03-1f3de7d29f62)
Omar Emara self-assigned this 2023-10-18 10:24:04 +02:00
Omar Emara added
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2023-10-18 10:24:51 +02:00
Member

I will take a closer look, maybe the issue is that rotation happens in global space while we expect it to happen in local space.

I will take a closer look, maybe the issue is that rotation happens in global space while we expect it to happen in local space.
Author

Made a video just in case

Made a video just in case
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2023-10-25 15:31:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113864
No description provided.