Fix #113864: Compositor translation is doubled

Translations in the realtime compositor are doubled where there is a
rotation or scale component.

That was due to applying translations even after domain realization. So
this patch restricts the translation to the case where domain
realization doesn't take place.